[package]
name = "gd-extension-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getfn = "0.1.1"
retour = "0.1"
winwrap = "0.1"
lazy_static = "1.4"
paste = "1.0.12"
rand = "0.8.5"
msgbox = "0.7.0"